Prompt the user for their client_id and client_secret

--- a/popup.html
+++ b/popup.html
@@ -5,12 +5,16 @@
     <link rel="stylesheet" type="text/css" href="popup.css">
   </head>
 
-  <body style="width:200px;">
+  <body style="width:45em">
     <div id="all">
       <h1>Key &amp; BPM Finder</h1>
         <ol>
-          <li><button id="authBtn">Launch</button></li>
-          <li>Connect with Spotify</li>
+          <li>Enter your API information below:
+            <div>
+              <label>Your Spotify API Client ID:<input id="client_id"></label>
+              <label>Your Spotify API Client Secret:<input id="client_secret"></label>
+            </div>
+          <li><button id="authBtn">Click here to install</button></li>
           <li>Head to Spotify's site or refresh the page and start searching!</li>
         </ol>
 
